<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddEventFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_event"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:fontFamily="@font/font_1"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintBottom_toBottomOf="@id/back_icon"
                    android:layout_marginStart="15dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/cake_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/cake_icon"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:hintTextColor="@color/blue"
        android:textColorHint="@color/blue"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cake_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/event_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/event_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/birthday_event"
        app:layout_constraintTop_toTopOf="@id/event_head"
        app:layout_constraintBottom_toBottomOf="@id/event_head"
        app:layout_constraintStart_toEndOf="@id/event_head"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/birthday_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:buttonTint="@color/blue"/>

        <RadioButton
            android:id="@+id/anniversary_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wedding_day"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            app:buttonTint="@color/blue"/>

    </RadioGroup>

    <TextView
        android:id="@+id/set_date_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/event_head"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/set_date_head"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/day_label"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/day"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/month_label"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            android:layout_marginStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/month"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/year_label"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/blue"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            android:layout_marginStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/date_ll">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:backgroundTint="@color/blue"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>