<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:fontFamily="@font/font_1"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintBottom_toBottomOf="@id/back_icon"
                    android:layout_marginStart="15dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/notifications"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/font_1"
        app:thumbTint="@color/blue"
        app:trackTint="@color/grey_color"/>


    <TextView
        android:id="@+id/set_time_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notification_switch"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/notification_time"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:fontFamily="@font/font_1"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/set_time_head"
        app:layout_constraintBottom_toBottomOf="@id/set_time_head"
        app:layout_constraintStart_toEndOf="@id/set_time_head"
        android:layout_marginStart="30dp"
        tools:text="6:00 AM"
        android:textSize="20sp"
        android:fontFamily="@font/font_1"/>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/set_time_head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:timePickerMode="spinner"
        android:scaleX="0.7"
        android:scaleY="0.7"/>

<com.google.android.material.button.MaterialButton
    android:id="@+id/set_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set"
    android:backgroundTint="@color/blue"
    android:textColor="@color/white"
    app:layout_constraintTop_toBottomOf="@id/time_picker"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>